WebCore/html/HTMLInputElement.cpp
@@ -232,7 +232,7 @@ void HTMLInputElement::dispatchFocusEvent()
     if (isTextField()) {
         setAutofilled(false);
         if (inputType() == PASSWORD && document()->frame())
-            document()->frame()->setSecureKeyboardEntry(true);
+            document()->frame()->setUseSecureKeyboardEntryWhenActive(true);
     }
     HTMLGenericFormElement::dispatchFocusEvent();
 }
@@ -241,7 +241,7 @@ void HTMLInputElement::dispatchBlurEvent()
 {
     if (isTextField() && document()->frame()) {
         if (inputType() == PASSWORD)
-            document()->frame()->setSecureKeyboardEntry(false);
+            document()->frame()->setUseSecureKeyboardEntryWhenActive(false);
         document()->frame()->textFieldDidEndEditing(this);
     }
     HTMLGenericFormElement::dispatchBlurEvent();
