WebCore/page/FramePrivate.h
@@ -97,6 +97,7 @@ namespace WebCore {
         bool m_caretVisible : 1;
         bool m_caretPaint : 1;
         bool m_isActive : 1;
+        bool m_useSecureKeyboardEntryWhenActive : 1;
 
         RefPtr<CSSMutableStyleDeclaration> m_typingStyle;
 
